--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
 body {
-    
+    font-family: "Roboto", "Arial";
+    font-size: 16px;
+    line-height: 22px;
+    color: black;
 }
 h1 {
-    
+    font-size: 60px;
+    line-height: 60px;
 }
 h2 {
-    
+    font-size: 35px;
+    line-height: 41px;
+}
+h3 {
+    font-size: 24px;
+    line-height: 30px;
 }
