--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ p {
     text-align: center;
     margin-top: 7px;
     color: white;
+    width: 100%;
 }
 .features {
     background-color: #e3e26a;
