--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     font-size: 16px;
     line-height: 22px;
     color: white;
+    margin: 0;
 }
 h1 {
     font-size: 60px;
@@ -16,49 +17,65 @@ h3 {
     font-size: 24px;
     line-height: 30px;
 }
+.wrapper {
+    background-color: #849d8f;
+}
+.wrapper-ice {
+    background-image: url(../img/index/ice1.png);
+    background-repeat: no-repeat;
+    background-position: 50% 0%;
+}
 .container {
-    background-color: #6768e1;
     padding: 0;
     margin: 0 auto;
     min-width: 900px;
     max-width: 1200px;
+    position: relative;
 }
-.wrapper {
-    background: #849d8f;
+.slider-controls {
+    position: absolute;
+    bottom: 20px
 }
+.time {
+    position: absolute;
+    top: 0;
+    right: 2.3%;
+    width: 160px;
+    text-align: right;
+    z-index: 20;
+    font-size: 14px;
+}
+.number {
+    font-size: 22px;
+}
+
 .clearfix::after {
   content: "";
   display: table;
   clear: both;
 }
 .main-header {
-    background-color: #e065e1;
     width: 100%;
     height: 70px;
+    background: rgba(0, 0, 0, 0);
 }
 .logo {
-    background-color: #65dd64;
     width: 150px;
     float: left;
     padding: 12px 22px;
 }
 .main-navigation {
     float: left;
-    background-color: #e3e26a;
     width: 600px;
     height: 70px;
 }
 .user-block {
-    background-color: #65dd64;
     height: 70px;
     width:270px;
     float: right;
     margin-right: 20px;
 } 
-.main-menu {
-}
 .main-menu>li {
-    background-color: #65dd64;
     display: inline-block;
     vertical-align: middle;
     padding: 13px 10px;
@@ -67,6 +84,7 @@ h3 {
 }
 .main-menu>li>a {
     text-decoration: none;
+    color: white;
 }
 .user {
     background-color: #e3e26a;
@@ -97,57 +115,51 @@ h3 {
     margin-right: 12px;
 }
 h1 {
-    background-color: #e065e1;
     display: block;
     margin: 0 auto;
     margin-bottom: 30px;
     vertical-align: middle;
     text-align: center;
-    width: 670px;
+    width: 700px;
     
 }
-.slider {
-    background-color: #65dd64;
+.slider1 {
     height: 100%;
+    width: 100%;
     padding-top: 320px;
     position: relative;
-    
-}
-.time {
-    position: absolute;
-    top: 80px;
-    right: 370px;
-    width: 170px;
-    text-align: right;
-    z-index: 20;
+    z-index: 30;
 }
 .slider-button {
-    background-color: #dddd68;
     display: block;
     text-align: center;
     width: 200px;
     height: 30px;
-    padding: 20px 40px;
+    padding: 22px 40px 16px 40px;
     margin: 0 auto;
-    margin-bottom: 35px;
+    margin-bottom: 37px;
     border-radius: 100px;
     font-size: 32px;
+    background: linear-gradient(to top, #e74b36, #f26743);
+    color: white;
+    text-decoration: none;
 }
 .stocks {
-    background-color: #e065e1;
     height: 230px;
     margin: 0 auto;
     margin-bottom: 40px;
     width: 95.7%;
 }
 .stock {
-    background-color: #e3e26a;
     border-radius: 15px;
     font-size: 18px;
-    padding: 2.2%;
+    padding: 20px;
     box-sizing: border-box;
     width: 48.8%;
     height: 230px;
+}
+.stock>h2 {
+    margin-top: 7px;
 }
 h2 {
     margin: 0;
@@ -159,29 +171,32 @@ p {
 }
 .stock-left {
     float: left;
+    background: url("../img/index/berryback.jpg");
 }
 .stock-right {
     float: right;
+    background: url("../img/index/shokoback.jpg");
 }
 .button {
     float: right;
-    padding: 12px 22px;
+    padding: 12px 22px 14px 22px;
     border-radius: 100px;
     margin-top: 11px;
-    margin-right: -2px;
-    background-color: #65dd64;
+    margin-right: 2px;
+    background: linear-gradient(to top, #e74b36, #f26743);
+    text-decoration: none;
+    color: white;
 }
 .items {
-    background-color: #e065e1;
     width: 95.4%;
     margin: 0 auto;
+    margin-bottom: 10px;
 }
 .item {
     float: left;
     margin-right: 2.2%;
-    margin-bottom: 35px;
+    margin-bottom: 40px;
     width: 23.35%;
-    background-color: #65dd64;
     position: relative;
 }
 .item:nth-child(4n+4){
@@ -211,22 +226,23 @@ p {
     font-size: 30px;
 }
 .goods-title {
-    background-color: #e065e1;
     display: inline-block;
     text-align: center;
-    margin-top: 7px;
+    margin-top: 10px;
     color: white;
     width: 100%;
 }
 .features {
-    background-color: #e3e26a;
+    background: url("../img/index/pattern.jpg");
     clear: both;
     display: block;
     margin: 0 2.3%;
     padding: 0 20px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
     border-radius: 15px;
     margin-bottom: 40px;
+    margin-top: -35px;
+    color: black;
 }
 h3 {
     padding-top: 22px;
@@ -251,13 +267,11 @@ h3 {
 .news {
     clear: both;
     display: block;
-    background-color: #e065e1;
     margin: 0 2.3%;
     height: 220px;
     margin-bottom: 40px;
 }
 .news-block {
-    background-color: #65dd64;
     float: left;
     height: 220px;
     border-radius: 15px;
@@ -267,10 +281,32 @@ h3 {
 }
 .news-left {
     float: left;
+    background: url("../img/index/strawback.jpg");
+    color: black;
 }
 .news-right  {
     float: right;
     padding: 17px 23px;
+    background: url("../img/index/borderback.jpg");
+    color: black;
+}
+.news-right form {
+    position: relative;
+}
+.news-right input[type="email"] {
+    float: left;
+    width: 60%;
+    height: 36px;
+    padding: 2px 15px;
+}
+.news-right input[type="submit"] {
+    width: 130px;
+    height: 45px;
+    padding: 10px;
+    border: none;
+    position: absolute;
+    right: 0;
+    bottom: -43px;
 }
 .name {
     float: left;
@@ -284,36 +320,26 @@ h3 {
     width: 300px;
 }
 .sub-text {
-    margin-bottom: 42px;
+    margin-bottom: 45px;
 }
-.news-right input[type="email"] {
-    float: left;
-    width: 65%;
-    height: 36px;
-    padding: 2px 15px;
-}
+
 .map {
     width: 100%;
     margin: 0 auto;
-    margin-bottom: 26px
+    margin-bottom: 26px;
 }
 .main-footer {
     height: 76px;
     font-size: 13px;
     width: 100%;
 }
-.main-footer .container {
-    background-color: #e3e26a;
-}
 .social {
-    background-color: #e065e1;
     float: left;
     margin: 0 auto;
     width: 22.2%;
     margin-left: 2.3%;
 }
 .footer-menu {
-    background-color: #e065e1;
     width: 46.6%;
     text-align: center;
     float: left;
@@ -321,27 +347,27 @@ h3 {
     margin-right: 2.2%;
 }
 .footer-menu-left {
-    background-color: #65dd64;
     display: inline-block;
     width: 120px;
     vertical-align: top;
     text-align: left;
 }
+.footer-active:hover{
+    content: " ";
+    background: url("../img/index/footer-active.svg") no-repeat -10px 0px;
+}
 .footer-menu-right {
-    background-color: #65dd64;
     display: inline-block;
     width: 170px;
     text-align: left;
 }
 .html-academy {
-    background-color: #e065e1;
     float:right;
     width: 22.2%;
     margin-right: 2.3%;
     font-size: 12px;
 }
 .html-academy-content {
-    background-color: #65dd64;
     position: relative;
     width: 200px;
     float: right;
@@ -360,7 +386,26 @@ h3 {
     width: 300px;
     height: 305px;
 }
-
+.social-btn {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+    border: 4px solid #c2cec7;
+    background-image: url("../img/index/social.svg");
+}
+.social-btn-tw {
+    background-position: -3px -1px;
+} 
+.social-btn-inst {
+    background-position: -37px -1px;
+}
+.social-btn-fb {
+    background-position: -72px -1px;
+}
+.social-btn-vk {
+    background-position: -107px -1px;
+}
 /* КАТАЛОГ */
 .breadcrumbs {
     display: inline-block;
@@ -470,6 +515,7 @@ input[type="submit"] {
     margin-right: 15px;
     
 }
+
 /*background-color: #e3e26a;
 background-color: #e065e1;
 background-color: #65dd64;
