--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@ body {
     font-family: "Roboto", "Arial", sans-serif;
     font-size: 16px;
     line-height: 22px;
-    color: white;
     margin: 0;
+    min-width: 900px;
+    color: white;
 }
 h1 {
     font-size: 60px;
@@ -39,110 +40,25 @@ body > input[type="radio"] {
     display: none;
 }
 .wrapper {
+    width: 100%;
     background-color: #849d8f;
     background-image: url(../img/index/ice1.png);
     background-repeat: no-repeat;
     background-position: 50% 0%;
+    overflow: auto;
 }
 .wrapper-inner {
+    width: 100%;
     background-color: #849d8f;
+    margin: 0;
+    overflow: auto;
 }
 .container {
-    padding: 0;
+    min-width: 860px;
+    max-width: 1145px;
     margin: 0 auto;
-    min-width: 900px;
-    max-width: 1200px;
+    padding: 0 2.3%;
     position: relative;
-}
-.slider {
-    position: relative;
-    text-align: center;
-    color: white;
-    padding-top: 323px;
-    position: relative;
-    z-index: 10;
-}
-.slider-controls {
-    position: absolute;
-    bottom: 20px;
-    left: 2.3%;
-    z-index: 20;
-    font-size: 0;
-}
-.slider-controls label {
-    display: inline-block;
-    width: 17px;
-    height: 17px;
-    margin-right: 8px;
-    vertical-align: top;
-    background-color: transparent;
-    border: 2px solid white;
-    border-radius: 50%;
-    cursor: pointer;
-}
-#btn-1:checked ~ .wrapper #slide1,
-#btn-2:checked ~ .wrapper #slide2,
-#btn-3:checked ~ .wrapper #slide3 {
-    display: block;
-}
-#btn-1:checked ~ .wrapper label[for="btn-1"],
-#btn-2:checked ~ .wrapper label[for="btn-2"],
-#btn-3:checked ~ .wrapper label[for="btn-3"] {
-    background-color: white;
-}
-#btn-1:checked ~ .wrapper {
-    background-color: #849d8f;
-    background-image: url(../img/index/ice1.png);
-}
-#btn-2:checked ~ .wrapper {
-    background-color: #8996a6;
-    background-image: url(../img/index/ice2.png);
-}
-#btn-3:checked ~ .wrapper {
-    background-color: #9d8b84;
-    background-image: url(../img/index/ice3.png);
-}
-.slide-title {
-    width: 700px;
-    margin: 0 auto;
-    margin-bottom: 28px;
-    font-weight: 700;
-    font-size: 60px;
-}
-.slider-button {
-    display: block;
-    text-align: center;
-    width: 205px;
-    height: 30px;
-    padding: 20px 40px 14px 40px;
-    margin: 0 auto;
-    margin-bottom: 41px;
-    border-radius: 100px;
-    font-size: 32px;
-    background: linear-gradient(to top, #e74b36, #f26743);
-    text-decoration: none;
-    box-shadow: 0px 3px 2px -2px #9c4839;
-    font-weight: 700;
-}
-.slider-button:hover {
-    background: linear-gradient(to top, #ec6f5e, #f58669);
-    box-shadow: 0px 3px 2px -2px #9c4839;
-}
-.slider-button:active {
-    background: linear-gradient(to top, #e1613e, #d74632);
-    box-shadow: inset 0px 4px 1px -2px #a7301f;
-}
-.time {
-    position: absolute;
-    right: 2.3%;
-    width: 160px;
-    text-align: right;
-    font-size: 14px;
-    line-height: 24px;
-    z-index: 100;
-}
-.number {
-    font-size: 22px;
 }
 .clearfix::after {
   content: "";
@@ -150,17 +66,16 @@ body > input[type="radio"] {
   clear: both;
 }
 .main-header {
-    width: 100%;
+    width: 101%;
     height: 70px;
     background: rgba(0, 0, 0, 0);
 }
 .logo {
     width: 154px;
     float: left;
-    padding-left: 2px;
     margin-top: 10px;
-    margin-left: 2.3%;
-    margin-right: 15px;
+    margin-left: -4px;
+    margin-right: 14px;
 }
 .main-navigation {
     float: left;
@@ -170,9 +85,8 @@ body > input[type="radio"] {
 .user-block {
     width: 270px;
     float: right;
-    margin-right: 20px;
     font-size: 14px;
-} 
+}
 .main-menu>li {
     display: inline-block;
     vertical-align: middle;
@@ -274,10 +188,10 @@ a.catalog-menu-last {
     float: left;
     width: 92px;
     padding-top: 5px;
-    height: 27px;
+    height: 28px;
     border-radius: 20px;
     margin-top: 22px;
-    margin-right: 8px;
+    margin-right: 10px;
     position: relative;
     background: rgba( 255, 255, 255, 0.2);
 }
@@ -396,12 +310,11 @@ input:focus + .label-box label {
 }
 .basket {
     float: left;
-    width: 117px;
+    width: 116px;
     padding-top: 5px;
     height: 27px;
     border-radius: 20px;
     margin-top: 22px;
-    margin-right: 8px;
     position: relative;
     background: rgba( 255, 255, 255, 0.2);
 }
@@ -447,7 +360,7 @@ input:focus + .label-box label {
     height: 32px;
     border-radius: 100px;
     margin-top: 22px;
-    margin-right: 12px;
+    margin-right: 10px;
     background: rgba( 255, 255, 255, 0.2);
     position: relative;
     z-index: 1000;
@@ -473,8 +386,8 @@ input:focus + .label-box label {
 }
 .search-hover input {
     display: block;
-    padding: 13px 14px;;
-    padding-right: 125px;
+    padding: 13px 14px;
+    width: 100%;
     border-radius: 5px;
     border: 1px solid #d3d3d2;
 }
@@ -509,11 +422,105 @@ input:focus + .label-box label {
     top: 2px;
     z-index: 200;
 }
+.time {
+    position: absolute;
+    right: 41px;
+    width: 160px;
+    text-align: right;
+    font-size: 14px;
+    line-height: 24px;
+    z-index: 100;
+}
+.number {
+    font-size: 22px;
+	text-decoration: none;
+}
+.slider {
+    position: relative;
+    text-align: center;
+    color: white;
+    padding-top: 323px;
+    position: relative;
+    z-index: 10;
+}
+.slider-controls {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    z-index: 20;
+    font-size: 0;
+}
+.slider-controls label {
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    margin-right: 8px;
+    vertical-align: top;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 50%;
+    cursor: pointer;
+}
+#btn-1:checked ~ .wrapper #slide1,
+#btn-2:checked ~ .wrapper #slide2,
+#btn-3:checked ~ .wrapper #slide3 {
+    display: block;
+}
+#btn-1:checked ~ .wrapper label[for="btn-1"],
+#btn-2:checked ~ .wrapper label[for="btn-2"],
+#btn-3:checked ~ .wrapper label[for="btn-3"] {
+    background-color: white;
+}
+#btn-1:checked ~ .wrapper {
+    background-color: #849d8f;
+    background-image: url(../img/index/ice1.png);
+}
+#btn-1:checked ~ body {
+}
+#btn-2:checked ~ .wrapper {
+    background-color: #8996a6;
+    background-image: url(../img/index/ice2.png);
+}
+#btn-3:checked ~ .wrapper {
+    background-color: #9d8b84;
+    background-image: url(../img/index/ice3.png);
+}
+.slide-title {
+    width: 700px;
+    margin: 0 auto;
+    margin-bottom: 28px;
+    font-weight: 700;
+    font-size: 60px;
+}
+.slider-button {
+    display: block;
+    text-align: center;
+    width: 205px;
+    height: 30px;
+    padding: 20px 40px 14px 40px;
+    margin: 0 auto;
+    margin-bottom: 41px;
+    border-radius: 100px;
+    font-size: 32px;
+    background: linear-gradient(to top, #e74b36, #f26743);
+    text-decoration: none;
+    box-shadow: 0px 3px 2px -2px #9c4839;
+    font-weight: 700;
+    text-shadow: -1px 2px 4px rgba(0,0,0,0.2);
+}
+.slider-button:hover {
+    background: linear-gradient(to top, #ec6f5e, #f58669);
+    box-shadow: 0px 3px 2px -2px #9c4839;
+}
+.slider-button:active {
+    background: linear-gradient(to top, #e1613e, #d74632);
+    box-shadow: inset 0px 4px 1px -2px #a7301f;
+}
 .stocks {
     height: 230px;
     margin: 0 auto;
     margin-bottom: 40px;
-    width: 95.7%;
+    width: 100%;
 }
 .stock {
     border-radius: 16px;
@@ -521,7 +528,7 @@ input:focus + .label-box label {
     font-weight: 700;
     padding: 20px;
     box-sizing: border-box;
-    width: 48.8%;
+    width: 49%;
     height: 230px;
 }
 .stock>h2 {
@@ -566,22 +573,20 @@ p {
     box-shadow: inset 0px 4px 1px -2px #a7301f;
 }
 .items {
-    width: 95.4%;
+    width: 100%;
     margin: 0 auto;
     margin-bottom: 10px;
 }
 .item {
     display: inline-block;
-    margin-right: 1.8%;
+    margin-right: 1.9%;
     margin-bottom: 37px;
     width: 23.35%;
     position: relative;
     vertical-align: top;
 }
-.item-active {
-}
 .item:nth-child(4n+4){
-  margin-right: -1.8%;
+  margin-right: -1%;
 }
 .item-top>img {
     width:100%;
@@ -653,7 +658,7 @@ p {
     background: url("../img/index/pattern.jpg");
     clear: both;
     display: block;
-    margin: 0 2.3%;
+    margin: 0;
     padding: 0 20px;
     padding-bottom: 16px;
     border-radius: 15px;
@@ -662,7 +667,7 @@ p {
     color: black;
 }
 h3 {
-    padding-top: 22px;
+    padding-top: 24px;
     margin-bottom: 5px;
     font-weight: 500;
 }
@@ -671,17 +676,17 @@ h3 {
     position: relative;
 }
 .feature:last-child {
-    padding-bottom: 20px;
+    padding-bottom: 18px;
 }
 .features-left {
     float: left;
-    width: 42%;
+    width: 44%;
     margin-left: 55px;
     line-height: 22px;
 }
 .features-right {
     float: right;
-    width: 44.4%;
+    width: 44%;
     margin-right: -5px;
 }
 .feature-ice-icon::before {
@@ -691,7 +696,7 @@ h3 {
     height: 55px;
     background: url("../img/index/icons.svg") no-repeat;
     position: absolute;
-    left: -63px;
+    left: -60px;
     top: -1px;
 }
 .feature-nature-icon::before {
@@ -701,7 +706,7 @@ h3 {
     height: 55px;
     background: url("../img/index/icons.svg") no-repeat -57px 0;
     position: absolute;
-    left: -63px;
+    left: -60px;
     top: -5px;
 }
 .feature-meat-icon::before {
@@ -711,7 +716,7 @@ h3 {
     height: 55px;
     background: url("../img/index/icons.svg") no-repeat -114px 0;
     position: absolute;
-    left: -59px;
+    left: -63px;
     top: -1px;
 }
 .feature-ship-icon::before {
@@ -721,13 +726,13 @@ h3 {
     height: 55px;
     background: url("../img/index/icons.svg") no-repeat -171px 0;
     position: absolute;
-    left: -59px;
+    left: -63px;
     top: -5px;
 }
 .news {
     clear: both;
     display: block;
-    margin: 0 2.3%;
+    margin: 0;
     height: 220px;
     margin-bottom: 40px;
     font-size: 16px;
@@ -741,7 +746,7 @@ h3 {
     width: 48.8%;
 }
 .news-left {
-    padding: 22px 17px;
+    padding: 23px 20px;
     float: left;
     background: url("../img/index/strawback.jpg");
     color: black;
@@ -800,7 +805,7 @@ h3 {
 }
 .name {
     float: left;
-    margin-bottom: 7px;
+    margin-bottom: 5px;
 }
 .news-title {
     float: left;
@@ -829,8 +834,8 @@ h3 {
 }
 .feedback-form {
     position: absolute;
-    right: 26px;
-    bottom: 148px;
+    right: 42px;
+    bottom: 170px;
     display: block;
     width: 302px;
     height: 305px;
@@ -839,7 +844,7 @@ h3 {
     box-sizing: border-box;
     background-color: rgba(255,255,255,0.9);
     color: black;
-    border-radius: 20px;
+    border-radius: 5px;
 }
 .feedback-form>span {
     display: block;
@@ -871,26 +876,27 @@ h3 {
 }
 .main-footer {
     height: 76px;
-    padding-top: 36px;
+    padding-top: 35px;
     font-size: 13px;
     width: 100%;
+    text-align: justify;
+    position: relative;
 }
-.main-footer>.container::before {
+.main-footer::before {
     content: "";
     width: 100%;
     border-top: 2px solid white;
     position: absolute;
-    bottom: 86px;
+    top: 0;
     opacity: 0.2;
 }
 .social {
     float: left;
     margin: 0 auto;
-    width: 22.2%;
-    margin-left: 2.3%;
+    width: 23%;
 }
 .footer-menu {
-    width: 46.6%;
+    width: 45.5%;
     text-align: center;
     float: left;
     margin-left: 2.2%;
@@ -909,7 +915,7 @@ h3 {
 }
 .footer-menu-right {
     width: 170px;
-    margin-right: -11px;
+    margin-right: -60px;
 }
 .footer-menu a {
     position: relative;
@@ -930,7 +936,6 @@ h3 {
     width: 22.2%;
     height: 50px;
     font-size: 12px;
-    padding-right: 2.3%;
     margin-right: -13px;
     padding-top: 6px;
 }
@@ -1017,7 +1022,6 @@ h3 {
     position: absolute;
     right: 15px;
     top: 15px;
-    
 }
 .feedback-title {
     color: black;
@@ -1078,6 +1082,7 @@ h3 {
 .feedback-show {
     display: block;
 }
+
 /* КАТАЛОГ */
 .basket:hover .basket-hover {
     display: block;
@@ -1178,7 +1183,6 @@ tr:first-child .basket-title {
     list-style: none;
     margin-top: 15px;
     margin-bottom: 5px;
-    margin-left: 2.3%;
     font-size: 14px;
 }
 .breadcrumbs>li {
@@ -1195,26 +1199,25 @@ tr:first-child .basket-title {
 }
 .page-name {
     margin: 0;
-    margin-left: 2.3%;
-    margin-bottom: 32px;
+    margin-bottom: 33px;
 }
 .filters {
-    padding-left: 2.3%;
     font-size: 14px;
     margin-bottom: 31px;
 } 
 .filter-sort{
     width: 200px;
     float: left;
-    margin-right: 8px;
-    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-bottom: 12px;
 }
 .sort-filter {
-    margin-left: 15px;
+    margin-left: 17px;
     width: 100px;
 }
 .sort {
-    padding: 10px;
+    padding: 8px;
+    margin-top: 5px;
     border-radius: 100px;
     font-size: 16px;
     width: 195px;
@@ -1273,6 +1276,9 @@ tr:first-child .basket-title {
 .fat-filter {
     float: left;
     border: none;
+    margin-left: 15px;
+    padding: 5px 0px;
+    margin-right: -1px;
 }
 .fat-filter legend {
     margin: -2px;
@@ -1314,7 +1320,7 @@ input[type="radio"]:checked+label::after {
     left: 10px;
 }
 .fill-filter legend {
-    margin-left: 10px;
+    margin-left: 12px;
     color: white;
 }
 .fill-filter {
@@ -1325,6 +1331,7 @@ input[type="radio"]:checked+label::after {
 }
 .fill-filter-list {
     padding: 7px;
+    margin-top: -2px;
     border-radius: 18px;
     font-size: 16px;
     background-color: #aabbb1;
@@ -1371,12 +1378,13 @@ input[type="checkbox"]:checked+label::after {
     height: 36px;
     border-radius: 100px;
     border: 3px solid white;
-    margin-top: 26px;
+    margin-top: 25px;
     box-sizing: border-box;
     font-size: 16px;
     background-color: #a6b7ae;
     color: white;
     cursor: pointer;
+    margin-right: -1px;
 }
 .filters input[type="submit"]:hover {
     background-color: white;
@@ -1386,15 +1394,17 @@ input[type="checkbox"]:checked+label::after {
     background-color: rgba(255,255,255,0.7);
     color: black;
     border: none;
-    box-shadow: inset 0px 4px 1px -2px #4f4f4f;
-    
+    box-shadow: inset 0px 4px 1px -2px #4f4f4f; 
+}
+.page-bot {
+    width: 100%;
 }
 .paginator {
-    margin-top: 32px;
+    margin-top: 33px;
     float: right;
     margin-bottom: 28px;
-    margin-right: 53px;
     position: relative;
+    margin-right: 1.8%;
 }
 .paginator>a {
     display: inline-block;
@@ -1439,10 +1449,6 @@ input[type="checkbox"]:checked+label::after {
     top: 5px;
     right: -23px;
 }
-/*background-color: #e3e26a;
-background-color: #e065e1;
-background-color: #65dd64;
-background-color: #e065e1;*/
 .catalog-menu, .item .button,.user-hover, .search-hover,.basket-hover {
     display: none;
 }
